--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Do końca 2. iteracji:
-- intro
+- naprawienie wysyłatora emaili :<
 - ogarnięcie wyglądu
-... bonusy:
+- intro
+... następnie:
+- personalizowane nicki
 - wysyłanie zaproszeń emailem
 - komentarze (są zaczęte!)
